Fixes to menu and overflow-hidden fixes

--- a/assets/public/css/backend.css
+++ b/assets/public/css/backend.css
@@ -758,6 +758,7 @@ a.il_btn {
   }
 }
 .il_columns.cf7-section.cf7-sec-page .container, .il_columns.cf7-section.cf7-sec-page .il-countdown-wrapper {
+  position: relative;
   background: url("/wp-content/uploads/2023/05/REACT-ASSETS-3-3-1.png"), #fff;
   background-repeat: no-repeat;
   background-position: bottom 4% right;
@@ -772,6 +773,27 @@ a.il_btn {
 @media (min-width: 1199.6px) {
   .il_columns.cf7-section.cf7-sec-page .container, .il_columns.cf7-section.cf7-sec-page .il-countdown-wrapper {
     margin-top: -4.5rem;
+  }
+}
+.il_columns.cf7-section.cf7-sec-page .container:after, .il_columns.cf7-section.cf7-sec-page .il-countdown-wrapper:after {
+  content: "";
+  background: url("../../../assets/icons/leaderhip_community_bg_after.png");
+  background-size: cover;
+  position: absolute;
+  width: 39.3rem;
+  height: 32.5rem;
+  top: -8rem;
+  right: -11rem;
+  z-index: -1;
+}
+@media (max-width: 797.5px) {
+  .il_columns.cf7-section.cf7-sec-page .container:after, .il_columns.cf7-section.cf7-sec-page .il-countdown-wrapper:after {
+    top: -13rem;
+  }
+}
+@media (max-width: 1659.5px) {
+  .il_columns.cf7-section.cf7-sec-page .container:after, .il_columns.cf7-section.cf7-sec-page .il-countdown-wrapper:after {
+    right: -5%;
   }
 }
 
@@ -3332,6 +3354,7 @@ main {
   max-width: 2560px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .site-main h1, .site-main h2, .site-main h3, .site-main h4, .site-main h5, .site-main h6, .interface-interface-skeleton__content h1, .interface-interface-skeleton__content h2, .interface-interface-skeleton__content h3, .interface-interface-skeleton__content h4, .interface-interface-skeleton__content h5, .interface-interface-skeleton__content h6 {
