--- a/assets/src/sass/styles/general.scss
+++ b/assets/src/sass/styles/general.scss
@@ -34,6 +34,7 @@ main {
   max-width: 2560px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 .site-main, .interface-interface-skeleton__content {
   h1, h2, h3, h4, h5, h6 {
