--- a/assets/src/sass/styles/nav.scss
+++ b/assets/src/sass/styles/nav.scss
@@ -32,7 +32,7 @@
       text-transform: uppercase;
       border: 1px solid var(--color-2);
       border-radius: 2rem;
-      color: var(--color-2);
+      color: var(--color-2) !important;
       opacity: 1;
       padding: 1.5rem 3rem;
       margin-top: 4rem;
